--- a/index.html
+++ b/index.html
@@ -3,36 +3,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div style='width:200px;height:400px;background-color: aqua;border: greenyellow;' class="" id="grandparent">
+   
+<div class="container">
+<div class="one">
+    1
+</div>
+<div class="two">
+    2
+</div>
+<div class="three">
+
+    3
+</div>
+<div class="four">
+
+    4
+</div>
+<div class="four">
+
+    4
+</div>
+
+<div class="four">
+
+    4
+</div>
+
+<div class="four">
+
+    4
+</div>
 
 
-        <div style='width:100px;height:300px;background-color: red;border: pink' class="" id="parent">
+<div class="four">
+
+    4
+</div>
 
 
-            <div style='width:50px;height:200px;background-color: greenyellow;border: red' class="" id="child">
+<div class="four">
 
-
-
-            </div>
-
-
-
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-
+    4
+</div>
+</div>
 
 
   <script src='index.js'></script>  
