--- a/index.html
+++ b/index.html
@@ -6,50 +6,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-   
-<div class="container">
-<div class="one">
-    1
+<div class="button">
+
+
+
 </div>
-<div class="two">
-    2
-</div>
-<div class="three">
-
-    3
-</div>
-<div class="four">
-
-    4
-</div>
-<div class="four">
-
-    4
-</div>
-
-<div class="four">
-
-    4
-</div>
-
-<div class="four">
-
-    4
-</div>
-
-
-<div class="four">
-
-    4
-</div>
-
-
-<div class="four">
-
-    4
-</div>
-</div>
-
 
   <script src='index.js'></script>  
 </body>
