--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="button">
+  <img id='saish' src="" alt="">
+  <canvas id='canvas'></canvas>
+<div id="button">
 
 
 
 </div>
-
+<input type="file" id="file">
   <script src='index.js'></script>  
 </body>
 </html>
