--- a/index.html
+++ b/index.html
@@ -6,14 +6,43 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <img id='saish' src="" alt="">
-  <canvas id='canvas'></canvas>
-<div id="button">
+  <span id="mainDiv" class="mainDiv">Hello</span>
+<div class="mainDiv">
+
+
+
+<div class="div1">
+
+
 
 
 
 </div>
-<input type="file" id="file">
+
+<div class="div2">
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
   <script src='index.js'></script>  
 </body>
 </html>
