--- a/index.html
+++ b/index.html
@@ -6,43 +6,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <span id="mainDiv" class="mainDiv">Hello</span>
-<div class="mainDiv">
 
 
-
-<div class="div1">
-
+<canvas id='canvas' width="500" height="500" ></canvas>
 
 
-
-
-</div>
-
-<div class="div2">
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-</div>
-
-
-
-
-
+  <script src='marvin.js'></script>  
   <script src='index.js'></script>  
+
 </body>
 </html>
