--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
 
+<input type="text" onkeyup="getDate()">
 
-<canvas id='canvas' width="500" height="500" ></canvas>
 
 
-  <script src='marvin.js'></script>  
   <script src='index.js'></script>  
 
 </body>
